--- a/bird/Dockerfile
+++ b/bird/Dockerfile
@@ -39,4 +39,4 @@ COPY --from=builder /bird-v2.0.7/birdcl /usr/local/sbin/birdcl
 COPY --from=builder /bird-v2.0.7/doc/bird.conf.example /usr/local/etc/bird.conf
 
 ENTRYPOINT [ "bird" ]
-#CMD bird -c /usr/local/etc/bird.conf -d -s /usr/local/var/run/bird.ctl
+#CMD bird -c /usr/local/etc/bird.conf -d -s /usr/local/var/run/bird
