--- a/bird/Dockerfile
+++ b/bird/Dockerfile
@@ -31,12 +31,12 @@ RUN apt update && apt install -y \
   libssh-4 \
   libreadline7 
 
-RUN mkdir /etc/bird && mkdir -p /usr/local/var/run
+RUN mkdir /etc/bird && mkdir -p /var/run
 
 COPY --from=builder /bird-v2.0.7/bird /usr/local/sbin/bird
 COPY --from=builder /bird-v2.0.7/birdc /usr/local/sbin/birdc
 COPY --from=builder /bird-v2.0.7/birdcl /usr/local/sbin/birdcl
 COPY --from=builder /bird-v2.0.7/doc/bird.conf.example /usr/local/etc/bird.conf
 
-ENTRYPOINT [ "bird", "-c", "/usr/local/etc/bird.conf", "-d", "-s", "/usr/local/var/run/bird.ctl" ]
-#CMD bird -c /usr/local/etc/bird.conf -d -s /usr/local/var/run/bird.ctl
+ENTRYPOINT [ "bird", "-c", "/etc/bird/bird.conf", "-d", "-s", "/usr/local/var/run/bird.ctl" ]
+#CMD bird -c /etc/bird/bird.conf -d -s /var/run/bird.ctl
